# SCERSE-Syntax-Guardianv3.0

SCERSE - C Syntax Guardian/: BUILD-INSTRUCTIONS.md  CMakeCache.txt  CMakeLists.txt  CodeEditor.cpp  CodeEditor.hpp  MainWindow.cpp  MainWindow.hpp  Makefile  SyntaxHighlighter.cpp  SyntaxHighlighter.hpp  c_error_detector.cpp  c_error_detector.h  cmake_install.cmake  main.cpp  test.c
SCERSE - C Syntax Guardian/SCERSE_autogen/: deps  mocs_compilation.cpp
SCERSE - C Syntax Guardian/SCERSE_autogen/EWIEGA46WW/: moc_CodeEditor.cpp  moc_CodeEditor.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_SyntaxHighlighter.cpp  moc_SyntaxHighlighter.cpp.d
SCERSE - C Syntax Guardian/oldgui/: oCMakeLists.txt  oCodeEditor.cpp  oCodeEditor.hpp  oErrorConsole.cpp  oErrorConsole.hpp  oMainWindow.cpp  oMainWindow.hpp  oSyntaxHighlighter.cpp  oSyntaxHighlighter.hpp  oldc_error_detector.cpp  omain.cpp
